@@ -22,8 +22,8 @@
 ?>
 <?php
 
-$gallery->version = '1.6-alpha1';
-$gallery->config_version = 98;
+$gallery->version = '1.6-alpha2-svn-b1';
+$gallery->config_version = 99;
 $gallery->album_version = 38;
 $gallery->user_version = 6;
 $gallery->url = "http://gallery.sourceforge.net";
