@@ -1,3 +1,12 @@
+2006-10-13 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b1
+
+ * Added "featured photo block" from Beckett Madden-Woods Madden-Woods.
+   
+   Splitted it into 2 files and made the frame configurable
+   via config wizard.
+
+   Config Version bump.
+
 2006-10-12 Chris Kelly <ckdake@ckdake.com> 1.6-alpha1
 
  * Release: 1.6-alpha1
